cicd/nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30001
  selector:
    app: nexus
